--- a/index.html
+++ b/index.html
@@ -2,36 +2,79 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Adicione a marca da campanha à sua foto!</title>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      margin: 0;
+      font-family: 'Nunito', sans-serif;
+      background: linear-gradient(to bottom, #6EC6F1, #1D4DA0);
+      color: white;
       text-align: center;
-      padding: 2rem;
+      padding-bottom: 3rem;
+    }
+    header {
+      background: white;
+      padding: 1rem;
+    }
+    header img {
+      height: 60px;
+    }
+    h1 {
+      margin-top: 2rem;
+      font-size: 2rem;
+    }
+    p {
+      font-size: 1.2rem;
+      max-width: 600px;
+      margin: 1rem auto;
     }
     canvas {
-      max-width: 100%;
-      border: 1px solid #ccc;
+      max-width: 90%;
+      border: 2px solid white;
       margin-top: 1rem;
+      border-radius: 10px;
     }
     .btn {
-      background-color: #0055aa;
-      color: white;
+      background-color: white;
+      color: #1D4DA0;
       padding: 0.75rem 1.5rem;
       border: none;
       border-radius: 8px;
       font-size: 1rem;
       cursor: pointer;
       margin-top: 1rem;
+      transition: background 0.3s;
     }
     .btn:hover {
-      background-color: #003f7f;
+      background-color: #f0f0f0;
+    }
+    input[type="file"] {
+      display: none;
+    }
+    label[for="upload"] {
+      display: inline-block;
+      background-color: white;
+      color: #1D4DA0;
+      padding: 0.75rem 1.5rem;
+      border-radius: 8px;
+      font-weight: bold;
+      margin-top: 2rem;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <h1>Coloque a marca da campanha na sua foto de perfil!</h1>
-  <input type="file" id="upload" accept="image/*" class="btn" />
+  <header>
+    <img src="banner.png" alt="Logo da campanha Zízimo Reitor">
+  </header>
+
+  <h1>Personalize sua foto de perfil</h1>
+  <p>Adicione a marca da campanha Zízimo Reitor à sua imagem de perfil para mostrar seu apoio!</p>
+
+  <label for="upload">Escolher imagem</label>
+  <input type="file" id="upload" accept="image/*" />
   <br />
   <canvas id="canvas"></canvas>
   <br />
@@ -45,7 +88,7 @@
     overlay.onload = function () {
       overlayLoaded = true;
     };
-    overlay.src = 'logo-da-campanha.png'; // Substitua por sua imagem real (com fundo transparente)
+    overlay.src = 'logo-da-campanha.png';
 
     document.getElementById('upload').onchange = function (e) {
       const reader = new FileReader();
@@ -80,4 +123,3 @@
   </script>
 </body>
 </html>
-
