--- a/index.html
+++ b/index.html
@@ -95,10 +95,25 @@
       reader.onload = function (event) {
         const img = new Image();
         img.onload = function () {
-          canvas.width = img.width;
-          canvas.height = img.height;
-          ctx.clearRect(0, 0, canvas.width, canvas.height);
-          ctx.drawImage(img, 0, 0);
+          const targetSize = 1080;
+          canvas.width = targetSize;
+          canvas.height = targetSize;
+          ctx.clearRect(0, 0, targetSize, targetSize);
+
+          // Calcula proporção da imagem
+          const scale = Math.min(targetSize / img.width, targetSize / img.height);
+          const newWidth = img.width * scale;
+          const newHeight = img.height * scale;
+          const xOffset = (targetSize - newWidth) / 2;
+          const yOffset = (targetSize - newHeight) / 2;
+
+          // Desenha a imagem centralizada no canvas
+          ctx.drawImage(img, xOffset, yOffset, newWidth, newHeight);
+
+          // Desenha o overlay (deve ser 1080x1080 também)
+          if (overlayLoaded) {
+            ctx.drawImage(overlay, 0, 0, targetSize, targetSize);
+          }
 
           if (overlayLoaded) {
             ctx.drawImage(overlay, 0, 0, img.width, img.height);
