--- a/index.html
+++ b/index.html
@@ -92,40 +92,31 @@
 
     document.getElementById('upload').onchange = function (e) {
       const reader = new FileReader();
-      reader.onload = function (event) {
-        const img = new Image();
-        img.onload = function () {
-          const targetSize = 1080;
-          canvas.width = targetSize;
-          canvas.height = targetSize;
-          ctx.clearRect(0, 0, targetSize, targetSize);
+      img.onload = function () {
+        const targetSize = 1080;
+        canvas.width = targetSize;
+        canvas.height = targetSize;
+        ctx.clearRect(0, 0, targetSize, targetSize);
 
-          // Calcula proporção da imagem
-          const scale = Math.min(targetSize / img.width, targetSize / img.height);
-          const newWidth = img.width * scale;
-          const newHeight = img.height * scale;
-          const xOffset = (targetSize - newWidth) / 2;
-          const yOffset = (targetSize - newHeight) / 2;
+        // Redimensionar e centralizar imagem do usuário
+        const scale = Math.min(targetSize / img.width, targetSize / img.height);
+        const newWidth = img.width * scale;
+        const newHeight = img.height * scale;
+        const xOffset = (targetSize - newWidth) / 2;
+        const yOffset = (targetSize - newHeight) / 2;
 
-          // Desenha a imagem centralizada no canvas
-          ctx.drawImage(img, xOffset, yOffset, newWidth, newHeight);
+        ctx.drawImage(img, xOffset, yOffset, newWidth, newHeight);
 
-          // Desenha o overlay (deve ser 1080x1080 também)
-          if (overlayLoaded) {
+        // Redesenha o overlay exatamente em 1080x1080
+        if (overlay.complete && overlay.naturalWidth > 0) {
+          ctx.drawImage(overlay, 0, 0, targetSize, targetSize);
+        } else {
+          overlay.onload = function () {
             ctx.drawImage(overlay, 0, 0, targetSize, targetSize);
-          }
-
-          if (overlayLoaded) {
-            ctx.drawImage(overlay, 0, 0, img.width, img.height);
-          } else {
-            overlay.onload = function () {
-              overlayLoaded = true;
-              ctx.drawImage(overlay, 0, 0, img.width, img.height);
-            };
-          }
-        };
-        img.src = event.target.result;
+          };
+        }
       };
+
       reader.readAsDataURL(e.target.files[0]);
     };
 
