--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     const canvas = document.getElementById('canvas');
     const ctx = canvas.getContext('2d');
     const overlay = new Image();
-    overlay.src = 'logo-da-campanha.png';
+    overlay.src = 'logo-da-campanha2.png';
 
     document.getElementById('upload').onchange = function (e) {
       const reader = new FileReader();
