--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       border: 2px solid white;
       margin-top: 1rem;
       border-radius: 10px;
+      touch-action: none;
     }
     .btn {
       background-color: white;
@@ -105,6 +106,14 @@
       }
     }
 
+    function getTouchPos(canvas, touchEvent) {
+      const rect = canvas.getBoundingClientRect();
+      return {
+        x: touchEvent.touches[0].clientX - rect.left,
+        y: touchEvent.touches[0].clientY - rect.top
+      };
+    }
+
     canvas.addEventListener('mousedown', (e) => {
       isDragging = true;
       dragStartX = e.offsetX - imageX;
@@ -124,6 +133,29 @@
     });
 
     canvas.addEventListener('mouseleave', () => {
+      isDragging = false;
+    });
+
+    // Suporte a toque em dispositivos móveis
+    canvas.addEventListener('touchstart', (e) => {
+      e.preventDefault();
+      isDragging = true;
+      const pos = getTouchPos(canvas, e);
+      dragStartX = pos.x - imageX;
+      dragStartY = pos.y - imageY;
+    });
+
+    canvas.addEventListener('touchmove', (e) => {
+      if (isDragging) {
+        e.preventDefault();
+        const pos = getTouchPos(canvas, e);
+        imageX = pos.x - dragStartX;
+        imageY = pos.y - dragStartY;
+        redrawCanvas();
+      }
+    });
+
+    canvas.addEventListener('touchend', () => {
       isDragging = false;
     });
 
