--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
       margin-top: 2rem;
       cursor: pointer;
     }
+    #controls {
+      margin-top: 1rem;
+    }
+    #controls input[type="range"] {
+      width: 300px;
+    }
   </style>
 </head>
 <body>
@@ -79,6 +85,10 @@
   <br />
   <canvas id="canvas"></canvas>
   <br />
+  <div id="controls">
+    <label for="scaleRange">Zoom da imagem:</label><br>
+    <input type="range" id="scaleRange" min="0.5" max="2" value="1" step="0.01">
+  </div>
   <button class="btn" onclick="download()">Baixar imagem com a marca</button>
 
   <script>
@@ -87,7 +97,11 @@
     const overlay = new Image();
     overlay.src = 'logo-da-campanha3.png';
 
+    const scaleInput = document.getElementById('scaleRange');
+
     let userImage = null;
+    let baseWidth = 0;
+    let baseHeight = 0;
     let newWidth = 0;
     let newHeight = 0;
     let imageX = 0;
@@ -95,10 +109,13 @@
     let isDragging = false;
     let dragStartX = 0;
     let dragStartY = 0;
+    let scale = 1;
 
     function redrawCanvas() {
       ctx.clearRect(0, 0, canvas.width, canvas.height);
       if (userImage) {
+        newWidth = baseWidth * scale;
+        newHeight = baseHeight * scale;
         ctx.drawImage(userImage, imageX, imageY, newWidth, newHeight);
       }
       if (overlay.complete && overlay.naturalWidth !== 0) {
@@ -136,7 +153,6 @@
       isDragging = false;
     });
 
-    // Suporte a toque em dispositivos móveis
     canvas.addEventListener('touchstart', (e) => {
       e.preventDefault();
       isDragging = true;
@@ -169,9 +185,12 @@
           canvas.height = targetSize;
 
           userImage = img;
-          const scale = Math.min(targetSize / img.width, targetSize / img.height);
-          newWidth = img.width * scale;
-          newHeight = img.height * scale;
+          const imgScale = Math.min(targetSize / img.width, targetSize / img.height);
+          baseWidth = img.width * imgScale;
+          baseHeight = img.height * imgScale;
+          scale = 1;
+          newWidth = baseWidth;
+          newHeight = baseHeight;
           imageX = (targetSize - newWidth) / 2;
           imageY = (targetSize - newHeight) / 2;
 
@@ -181,6 +200,11 @@
       };
       reader.readAsDataURL(e.target.files[0]);
     };
+
+    scaleInput.addEventListener('input', () => {
+      scale = parseFloat(scaleInput.value);
+      redrawCanvas();
+    });
 
     function download() {
       const link = document.createElement('a');
